[package]
name = "sdl-animation"
version = "0.1.0"
authors = ["hautbois1011 <subterranean_mirror@yahoo.co.jp>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
features = ["use_mac_framework"]
version = "*"
